tests/semantic/pass/infered-declaration2.tiger
let
	var x := "test"
in
end
