tests/semantic/fail/infixExp-6.tiger
let
      var x : string = ""
in
      x := "Hello" < "Bye"
end
